# Calculator-bot

./: README.md  pyproject.toml
calcbot/: bot.py
